--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "phpunit/phpunit": "^6.2",
         "jakub-onderka/php-parallel-lint": "^0.9",
         "squizlabs/php_codesniffer": "^3.0",
-        "friendsofphp/php-cs-fixer": "^2.4"
+        "friendsofphp/php-cs-fixer": "^2.4",
+        "phpstan/phpstan-shim": "^0.8.5"
     },
     "autoload": {
         "psr-4": {
