--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -10,3 +10,10 @@ checks:
 
 tools:
     external_code_coverage: true
+
+build:
+    nodes:
+        analysis:
+            tests:
+                override:
+                    - php-scrutinizer-run
