--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,11 @@
         "eclipxe/xmlresourceretriever": "^1.2",
         "eclipxe/xmlschemavalidator": "^2.0"
     },
+    "suggest": {
+        "genkgo/xsl": "^0.5.20"
+    },
     "require-dev": {
+        "genkgo/xsl": "^0.5.20",
         "phpunit/phpunit": "^6.2",
         "jakub-onderka/php-parallel-lint": "^0.9",
         "squizlabs/php_codesniffer": "^3.0",
