--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ php:
 # See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
 sudo: false
 
+addons:
+  apt:
+    packages:
+      - libsaxonb-java
+
 before_script:
   - travis_retry composer install --no-interaction --prefer-dist
   - |
