Replace jakub-onderka/php-parallel-lint with overtrue/phplint

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
 
 script:
   - mkdir -p build/tests/
-  - vendor/bin/parallel-lint src/ tests/
+  - vendor/bin/phplint
   - vendor/bin/phpcs -sp src/ tests/
   - vendor/bin/php-cs-fixer fix --using-cache=no --dry-run --verbose
   - vendor/bin/phpunit --coverage-text --coverage-clover=build/tests/coverage.xml
