--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "ext-libxml": "*",
         "ext-openssl": "*",
         "ext-soap": "*",
+        "ext-bcmath": "*",
         "eclipxe/xmlresourceretriever": "^1.2",
         "eclipxe/xmlschemavalidator": "^2.0"
     },
