--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@
 /.gitattributes      export-ignore
 /.gitignore          export-ignore
 /.php_cs.dist        export-ignore
+/.phplint.yml        export-ignore
 /.scrutinizer.yml    export-ignore
 /.travis.yml         export-ignore
 /phpcs.xml.dist      export-ignore
