--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,42 @@
-site_name: CfdiUtils
-site_description: Librería de utilerías comunes para trabajar con PHP y CFDI 3.2 & 3.3 (México)
+site_name: "CfdiUtils"
+site_description: "Librería de utilerías comunes para trabajar con PHP y CFDI 3.2 & 3.3 (México)"
 
-theme: readthedocs
+theme:
+    name: "readthedocs"
+    language: "es"
+
+pages:
+    - "CfdiUtils": "index.md"
+    - "Lectura":
+        - leer/leer-cfdi.md
+        - leer/quickreader.md
+        - leer/limpieza-cfdi.md
+    - "Validación":
+        - validar/validacion-cfdi.md
+        - validar/validaciones-estandar.md
+    - "Creación":
+        - crear/crear-cfdi.md
+        - crear/elements-cfdi33.md
+        - crear/complementos-aun-no-implementados.md
+    - "Componentes":
+        - componentes/xmlresolver.md
+        - componentes/cadena-de-origen.md
+        - componentes/estado-sat.md
+        - componentes/elements.md
+        - componentes/nodes.md
+        - componentes/certificado.md
+    - "Contribuir":
+        - contribuir/guia-desarrollador.md
+        - contribuir/guia-documentador.md
+    - "Acerca de":
+        - "To Do List": "TODO.md"
+        - "Changelog": "CHANGELOG.md"
 
 markdown_extensions:
     - toc:
-        permalink: 
-    - admonition
-    - def_list
-    - fenced_code
+        permalink: ""
+    - admonition  # add block-styled side content
+    - def_list    # https://python-markdown.github.io/extensions/definition_lists/
+    - fenced_code # code blocks
 
-copyright: Copyright &copy; MIT License 2017 - 2018 Carlos C Soto & contibutors
-
+copyright: "Copyright &copy; MIT License 2017 - 2018 Carlos C Soto & contibutors"
