--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,6 +22,7 @@ init:
     - SET PATH=C:\Program Files\OpenSSL;c:\tools\php;C:\tools\composer;%PATH%
     - SET COMPOSER_NO_INTERACTION=1
     - SET ANSICON=121x90 (121x90)
+    - SET saxonb-path=c:\tools\saxonb\bin\transform.exe
 
 ## Install PHP and composer, and run the appropriate composer command
 install:
@@ -30,11 +31,8 @@ install:
         # Check if installation is cached
         if (!(Test-Path c:\tools\php)) {
             appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
-            # # install sqlite
-            # appveyor-retry cinst -y sqlite
             Get-ChildItem -Path c:\tools\php
             cd c:\tools\php
-            # Set PHP environment items that are always needed
             copy php.ini-production php.ini
             Add-Content php.ini "`n date.timezone=UTC"
             Add-Content php.ini "`n extension_dir=ext"
@@ -42,21 +40,26 @@ install:
             Add-Content php.ini "`n extension=php_openssl.dll"
             Add-Content php.ini "`n extension=php_mbstring.dll"
             Add-Content php.ini "`n extension=php_fileinfo.dll"
-            # Add-Content php.ini "`n extension=php_pdo_sqlite.dll"
-            # Add-Content php.ini "`n extension=php_sqlite3.dll"
             Add-Content php.ini "`n extension=php_curl.dll"
             Add-Content php.ini "`n extension=php_xsl.dll"
             Add-Content php.ini "`n extension=php_soap.dll"
         }
     # composer
     - ps: |
-        # download Composer
         if (!(Test-Path C:\tools\composer)) {
             New-Item -path c:\tools -name composer -itemtype directory
         }
         if (!(Test-Path c:\tools\composer\composer.phar)) {
             appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar -Filename C:\tools\composer\composer.phar
             Set-Content -path 'C:\tools\composer\composer.bat' -Value ('@php C:\tools\composer\composer.phar %*')
+        }
+    # saxonb
+    - ps: |
+        if (!(Test-Path C:\tools\saxonb)) {
+            New-Item -path c:\tools -name saxonb -itemtype directory
+        }
+        if (!(Test-Path C:\tools\saxonb\bin\transform.exe)) {
+            appveyor-retry cinst --params '""/InstallDir:C:\tools\saxonb""' --ignore-checksums -y saxonhe
         }
     # install composer dependences
     - cd c:\projects\project
