Allow run phpunit 7 if php >= 7.1
Fix `phpunit.xml.dist` configuration file

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,9 @@ script:
   - vendor/bin/php-cs-fixer fix --using-cache=no --dry-run --verbose
   - |
     if [[ $TRAVIS_PHP_VERSION == $FULL_BUILD_PHP_VERSION ]]; then
-      php -dzend_extension=xdebug.so vendor/bin/phpunit --coverage-text --coverage-clover=build/tests/coverage.xml
+      php -dzend_extension=xdebug.so vendor/bin/phpunit --verbose --coverage-text --coverage-clover=build/tests/coverage.xml
     else
-      vendor/bin/phpunit
+      vendor/bin/phpunit --verbose
     fi
   - vendor/bin/phpstan.phar --no-progress analyse --level max src/ tests/
   - node node_modules/markdownlint-cli/markdownlint.js *.md docs/
