--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,6 +17,7 @@ environment:
         - php: 7.0
         - php: 7.1
         - php: 7.2
+        - php: 7.3
 
 init:
     - SET PATH=C:\Program Files\OpenSSL;c:\tools\php;C:\tools\composer;%PATH%
