fix to build using old mkdocs version

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ script:
     fi
   - vendor/bin/phpstan.phar --no-progress analyse --level max src/ tests/
   - node node_modules/markdownlint-cli/markdownlint.js *.md docs/
+  - sed -i 's/^nav:/pages:/' mkdocs.yml # change 'nav:' to 'pages:' since mkdocs version is outdated
   - ~/.local/bin/mkdocs build --strict --site-dir build/docs
 
 after_script:
