--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "ext-openssl": "*",
         "ext-soap": "*",
         "ext-iconv": "*",
+        "symfony/process": "^3.4|^4.2",
         "eclipxe/xmlresourceretriever": "^1.3.0",
         "eclipxe/xmlschemavalidator": "^2.0.2"
     },
