AppVeyor: run phpunit using testdox and verbose

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -70,5 +70,5 @@ test_script:
     - vendor\bin\phplint
     - vendor\bin\phpcs -sp src tests
     - vendor\bin\php-cs-fixer fix --using-cache=no --dry-run --verbose
-    - vendor\bin\phpunit
+    - vendor\bin\phpunit --testdox --verbose
     - vendor\bin\phpstan.phar.bat --no-progress analyse --level max src tests
