--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,10 @@
         "eclipxe/xmlschemavalidator": "^2.0.2"
     },
     "suggest": {
-        "genkgo/xsl": "^0.5.20"
+        "genkgo/xsl": "Allows usage of Genkgo/Xsl transformations"
     },
     "require-dev": {
-        "genkgo/xsl": "^0.5.20",
+        "genkgo/xsl": "^0.6",
         "phpunit/phpunit": "^6.2|^7.3",
         "overtrue/phplint": "^1.0",
         "squizlabs/php_codesniffer": "^3.0",
