--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
         ],
         "dev:test": [
             "vendor/bin/phplint",
-            "vendor/bin/phpunit",
+            "vendor/bin/phpunit --testdox --verbose --stop-on-failure",
             "vendor/bin/phpstan.phar analyse --no-progress --level max src/ tests/"
         ],
         "dev:coverage": [
