Syntax error reported by appveyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ cache:
     - C:\ProgramData\chocolatey\bin -> .appveyor.yml
     - C:\ProgramData\chocolatey\lib -> .appveyor.yml
     - C:\tools\composer -> .appveyor.yml
-    - "%LOCALAPPDATA%\Composer\files -> composer.json"
+    - '%LOCALAPPDATA%\Composer\files -> composer.json'
 
 ## Build matrix for lowest and highest possible targets
 environment:
