--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -87,5 +87,6 @@ test_script:
     - vendor\bin\phplint.bat
     - vendor\bin\phpcs.bat -sp src tests
     - vendor\bin\php-cs-fixer.bat fix --dry-run --verbose
-    - vendor\bin\phpunit.bat --verbose
+    - if "%php%"=="7.0" vendor\bin\phpunit.bat --verbose
+    - if not "%php%"=="7.0" vendor\bin\phpunit.bat --testdox --verbose
     - vendor\bin\phpstan.phar.bat --no-progress analyse --level max src tests
